--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "redux": "^5.0.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
